@@ -1,3 +1,8 @@
+2013-01-05	Malignant Manor <malignantmanor@users.sourceforge.net>
+	* schedule.cc: Add back quality check for dough and clear okay_to_take flag
+	  since okay_to_take doesn't get saved. This should fix dough not being used
+	  after cache out or reload.
+
 2013-01-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* actors.cc: Fixed dying fish turning into bread then fish by only using the
 	  'frame 0 then script to set correct frame' trick if first frame is empty.
